fixed button spacing

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -77,7 +77,7 @@ header .button-red {
   font-weight: 500;
   box-sizing: border-box;
   background-color: #f05f5d;
-  margin: 0 0 0 20px;
+  margin: 0 0 0 0px;
   border-radius: 7px;
   line-height: 1.15;
   font-family: proxima-nova, sans-serif;
